[package]
name = "mongo-connection-check"
version = "1.3.1"
description = "MongoDB Connection Check"
authors = ["Paul Done"]
edition = "2021"

[dependencies]
futures = {version = "0.3.*"}
tokio = {version = "0.2.*", features = ["full"]}  # Ugrade to Tokio 0.3 causes ClientOptions error
regex = "1.3.*"
trust-dns-resolver = "0.19.*"
clap = "2.33.*"
mongodb = "1.1.*"
