[package]
name = "mongo-connection-check"
version = "1.4.0"
description = "MongoDB Connection Check"
authors = ["Paul Done"]
edition = "2021"

[dependencies]
futures = {version = "0.3.*"}
tokio = {version = "1.4.*", features = ["full"]}  # Ugrade to Tokio 0.3 causes ClientOptions error
regex = "1.5.*"
trust-dns-resolver = "0.20.*"
clap = "2.34.*"
mongodb = "2.1.*"
