[package]
name = "mongo-connection-check"
version = "1.4.0"
description = "MongoDB Connection Check"
authors = ["Paul Done"]
edition = "2021"

[dependencies]
clap = "2.34.*"
futures = {version = "0.3.*"}
mongodb = "2.1.*"
regex = "1.5.*"
tokio = {version = "1.4.*", features = ["full"]}
trust-dns-resolver = "0.20.*"

